# nudgis-obs-plugin

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README-FR.md  README.md  buildspec.json
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/utils.zsh/: setup_linux  setup_ubuntu
.github/workflows/: main.yml  push.yaml
CI/linux/: 01_install_dependencies.sh  03_build_plugin.sh
CI/macos/: 02_build_obs_libs.sh  03_build_plugin.sh  04_package_plugin.sh
CI/windows/: 01_install_dependencies.ps1  02_build_obs_libs.ps1  03_build_plugin.ps1  04_package_plugin.ps1
ci/: ci_includes.generated.cmd  ci_includes.generated.sh
cmake/: ObsPluginHelpers.cmake
cmake/Modules/: FindJansson.cmake  FindLibObsFrontendApi.cmake  FindLibcurl.cmake
cmake/common/: compiler_common.cmake
data/locale/: en-US.ini  fr-FR.ini
docs/: windows_av_bypass.md
flatpak/: Makefile  com.obsproject.Studio.Plugin.Nudgis.metainfo.xml  com.obsproject.Studio.Plugin.Nudgis.yml
flatpak/release/: nudgis-obs-plugin.flatpak
installer/: installer-Windows.generated.iss  installer-Windows.iss.in  installer-macOS.generated.pkgproj
src/: http-client.cpp  http-client.hpp  nudgis-config.cpp  nudgis-config.hpp  nudgis-plugin.cpp  nudgis-plugin.hpp  nudgis-service.c  nudgis-service.cpp  nudgis-service.h  nudgis-service.hpp  nudgis-upload-ui.cpp  nudgis-upload-ui.hpp  nudgis-upload.ui  nudgis_data.c  nudgis_data.h  obs-app.hpp  plugin-macros.generated.h  plugin-macros.h.in  plugin-main.cpp  plugin-main.hpp  plugin-support.c.in  plugin-support.h  settings.ui  test.cpp
src/obs/: obs-utils.cpp  obs-utils.hpp
ui/: settings.ui
